<?xml version="1.0"?>
<package format="2">
  <name>iiwas_bringup</name>
  <version>1.0.0</version>
  <description>The iiwas_bringup package</description>

  <maintainer email="puze@robot-learning.de">Puze Liu</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
