<?xml version="1.0"?>
<package format="2">
  <name>iiwas_control</name>
  <version>1.0.0</version>
  <description>The iiwas_control package</description>

  <maintainer email="puze@robot-learning.de">Puze Liu</maintainer>

  <license>MIT</license>

  <author email="puze@robot-learning.de">Puze Liu</author>
  <author email="davide@robot-learning.de">Davide tateo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
