<?xml version="1.0"?>
<package format="2">
  <name>iiwas_driver</name>
  <version>1.0.0</version>
  <description>The iiwas_driver package</description>

  <maintainer email="puze@robot-learning.de">Puze Liu</maintainer>

  <license>MIT</license>

  <author email="puze@robot-learning.de">Puze Liu</author>
  <author email="davide@robot-learning.de">Davide tateo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>iiwas_srv</depend>

</package>
