<?xml version="1.0"?>
<package format="2">
  <name>iiwas_pybullet</name>
  <version>0.0.1</version>
  <description>The iiwas_pybullet package</description>
  <maintainer email="puze@robot-learning.de">Puze Liu</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>pybullet_ros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <pybullet_ros plugin="${prefix}/iiwas_hw_sim_plugins.xml"/>
  </export>
</package>
